@@ -1,4 +1,5 @@
 0.9.6
+- Fixed minor wx sizer problems for the tools
 - New confocal fitting models (#111):
   - 3D+3D, 2D+2D, 3D+2D; no triplet
   - T+T+2D+2D, T+T+3D+2D; double triplet
